rename project identity to annotationplatform
